[gd_scene load_steps=10 format=2]

[ext_resource path="res://hazards/LavaPot.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/hazards/lava_pot.png" type="Texture" id=2]
[ext_resource path="res://assets/external/FreeSFX/FreeSFX/GameSFX/Explosion/Retro Explosion Short 15.wav" type="AudioStream" id=3]

[sub_resource type="AtlasTexture" id=93]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=94]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=96]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=97]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 8, 8 )

[sub_resource type="SpriteFrames" id=98]
animations = [ {
"frames": [ SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[node name="LavaPot" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4, 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 4, 4 )
frames = SubResource( 98 )

[node name="LavaTiles" type="Node2D" parent="."]
position = Vector2( 0, 8 )

[node name="Timer" type="Timer" parent="."]

[node name="LavaSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -25.0
pitch_scale = 0.5

[connection signal="body_entered" from="." to="." method="_on_LavaPot_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_LavaPot_body_exited"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
